<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_main_layout"
        android:title="@string/search_text_header" />

    <item
        android:id="@+id/mediaLibraryFragment"
        android:icon="@drawable/ic_media"
        android:title="@string/media_library_text_header" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/header_settings" />
</menu>