...
    android:id="@+id/main"
    style="@style/MainLayout"

    tools:context=".main.ui.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/rootFragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:navGraph="@navigation/nav_graph" />

    <View
        android:layout_height="0.6dp"
        android:layout_width="match_parent"
        android:background="@drawable/upper_line_bottom_navigation"
...
